<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/inicio"
        android:icon="@drawable/ic_launcher_foreground" />

    <item
        android:id="@+id/gamesFragment"
        android:title="@string/juegos"
        android:icon="@drawable/iconojuego" />

    <item
        android:id="@+id/mapFragment"
        android:title="@string/mapa"
        android:icon="@drawable/ic_launcher_foreground" />

    <item
        android:id="@+id/scannerFragment"
        android:title="@string/esc_ner"
        android:icon="@drawable/ic_launcher_foreground" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/perfil"
        android:icon="@drawable/ic_person" />

</menu>